tests/negative/regression/r20.orng
// r20.orng:5:28: error: attempt to take slice-of something that is not an array
// fn main() -> Int { return []() }
//                           ^
// 
fn main() -> Int { return []() }